samples/ut/access/FailPrivate04.err
FailPrivate04.z2(7, 29): error: can't access non public variable 'data' of class 'Bar'